--- a/docs/howtos/Client Generation/07tcgcTypes.mdx
+++ b/docs/howtos/Client Generation/07tcgcTypes.mdx
@@ -1,7 +1,8 @@
+---
+title: TypeSpec Type Representation in TCGC
+---
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-
-# TypeSpec Type Representation in TCGC
 
 This page documents what type definitions in TypeSpec would look like when returned by TCGC
 
