--- a/docs/howtos/Client Generation/12multipart.mdx
+++ b/docs/howtos/Client Generation/12multipart.mdx
@@ -1,7 +1,10 @@
+---
+title: Multipart
+---
+
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# Multipart
 
 This doc details what emitters will generate for multipart request.
 
