--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -16,4 +16,4 @@ hero:
       variant: minimal
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+import { Card, CardGrid } from "@astrojs/starlight/components";
