--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../../public/azure.svg
   actions:
     - text: Docs
-      link: /docs/intro/
+      link: docs/intro/
       icon: right-arrow
     - text: TypeSpec language docs
       link: https://typespec.io
