--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -41,6 +41,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
 - [`@clientInitialization`](./decorators.md#@Azure.ClientGenerator.Core.clientInitialization)
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
+- [`@clientNamespace`](./decorators.md#@Azure.ClientGenerator.Core.clientNamespace)
 - [`@convenientAPI`](./decorators.md#@Azure.ClientGenerator.Core.convenientAPI)
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
