--- a/docs/howtos/Client Generation/06types.mdx
+++ b/docs/howtos/Client Generation/06types.mdx
@@ -2380,3 +2380,56 @@ jsonWriter.writeStringField("prop", Objects.toString(this.value, null));
 
 </TabItem>
 </Tabs>
+
+## Namespace
+
+All models, enums, unions will follow the TypeSpec namespace as their default client namespaces. This can be overridden by the `@clientNamespace` decorator.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```tsp
+namespace My.Service;
+
+model Foo {
+  prop: string;
+}
+
+@clientNamespace("My.Service.Temp")
+model Bar {
+  prop: string;
+}
+```
+
+</TabItem>
+
+<TabItem value="python" label="Python">
+
+```python
+from my.service import Foo
+from my.service.temp import Bar
+
+foo = Foo(prop="hello")
+bar = Bar(prop="world")
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+TODO
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+TODO;
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+TODO
+```
