--- a/docs/howtos/Client Generation/02client.mdx
+++ b/docs/howtos/Client Generation/02client.mdx
@@ -15,6 +15,8 @@ By default, each namespace with `@service` decorator will be generated as a root
 
 Other nested namespacess and interfaces of each root client will be generated as operation groups with hierarchy.
 
+The client namespace of each client will be the name of the namespace the interface belong to or the namespace itself.
+
 Different language's code generator will have different way to organize clients and operation groups. Please refer the following examples.
 
 ### Single client
@@ -25,7 +27,6 @@ Different language's code generator will have different way to organize clients 
 ```typespec
 @service({
   title: "Pet Store",
-  version: "v1",
 })
 namespace PetStore;
 
@@ -284,11 +285,14 @@ actionsClient.close();
 ## Customizations
 
 Customization SHOULD always be done in a file called `client.tsp` along with the `main.tsp`.
-If there is any customizations including `@client` and `@operationGroup`, client hierarchy will only be inferred from them. The logic defined in the default behaviors will not take affect anymore.
+
+You could use `@client` and `@operationGroup` to reconstruct the client hierarchy, but if any customizations did, client hierarchy will only be inferred from them. The logic defined in the default behaviors will not take affect anymore.
+
+Also, when you reconstruct the client hierarchy, the client namespace of the client and operation group will follow the new namespace you defined in `client.tsp`. You could use `@clientNamespace` to override it.
 
 For this section, we will assume that you have service called `PetStore` in the namespace `PetStore`, defining the two operations `feed` and `pet`.
 
-### Renaming the single client
+### Renaming the single client name
 
 This can be achieved with the augment operator and the emitter package
 
@@ -349,35 +353,98 @@ client.pet();
 </TabItem>
 </Tabs>
 
-### Splitting the operations into two clients
+### Renaming the single client namespace name
 
-Two clients that separate the operations can be declared using the `@client` decorator from `typespec-client-generator-core`:
+This can be achieved with the augment operator and the emitter package
 
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
 
 ```typespec
-import "./main.tsp"
-import "@azure-tools/typespec-client-generator-core"
+import "./main.tsp";
+import "@azure-tools/typespec-client-generator-core";
 
 using Azure.ClientGenerator.Core;
 
-namespace Customizations;   # The actual name here doesn't matter and is here for organization purposes only
+@@clientNamespace(PetStore, "PetStoreRenamed");
+```
+
+</TabItem>
+<TabItem value="python" label="Python">
+
+```python
+from pet_store_renamed import PetStoreClient
+
+client = PetStoreClient()
+client.feed()
+client.pet()
+```
+
+</TabItem>
+<TabItem value="csharp" label="CSharp" >
+
+```csharp
+using PetStoreRenamed;
+
+PetStoreClient client = new PetStoreClient();
+client.Feed();
+client.Pet();
+```
+
+</TabItem>
+<TabItem value="typescript" label="Typescript" >
+
+```typescript
+import { PetStoreClient } from "@azure/package-name";
+
+const client = new PetStoreClient();
+client.feed();
+client.pet();
+```
+
+</TabItem>
+<TabItem value="java" label="Java" >
+
+```java
+package com.petstorerenamed;
+
+PetStoreClient client = new PetStoreClientBuilder().buildClient();
+client.feed();
+client.pet();
+```
+
+</TabItem>
+</Tabs>
+
+### Splitting the operations into two clients
+
+Two clients that separate the operations can be declared using the `@client` decorator from `typespec-client-generator-core`.
+
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
+```typespec
+import "./main.tsp";
+import "@azure-tools/typespec-client-generator-core";
+
+using Azure.ClientGenerator.Core;
+
+namespace PetStoreRenamed; // this namespace will be the namespace of the clients and operation groups defined in this customization file
 
 @client({
   name: "FoodClient",
-  service: PetStoreNamespace
+  service: PetStore,
 })
 interface Client1 {
-  feed is PetStoreNamespace.feed;
+  feed is PetStore.feed;
 }
 
 @client({
   name: "PetActionClient",
-  service: PetStoreNamespace
+  service: PetStore,
 })
 interface Client2 {
-  pet is PetStoreNamespace.pet;
+  pet is PetStore.pet;
 }
 ```
 
@@ -385,7 +452,7 @@ interface Client2 {
 <TabItem value="python" label="Python">
 
 ```python
-from pet_store import FoodClient, PetActionClient
+from pet_store_renamed import FoodClient, PetActionClient
 
 client1 = FoodClient()
 client2 = PetActionClient()
@@ -398,7 +465,7 @@ client2.pet()
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-using PetStore;
+using PetStoreRenamed;
 
 PetActionClient petActionClient = new PetActionClient();
 FoodClient foodClient = new FoodClient();
@@ -423,6 +490,8 @@ client2.feed();
 <TabItem value="java" label="Java" >
 
 ```java
+package com.petstorerenamed;
+
 FoodClient foodClient = new FoodClientBuilder().buildClient();
 PetActionClient petActionClient = new PetActionClientBuilder().buildClient();
 
@@ -441,25 +510,25 @@ Two clients that separate the operations can be declared using the `@client` dec
 <TabItem value="typespec" label="TypeSpec" default>
 
 ```typespec
-import "./main.tsp"
-import "@azure-tools/typespec-client-generator-core"
+import "./main.tsp";
+import "@azure-tools/typespec-client-generator-core";
 
 using Azure.ClientGenerator.Core;
 
 @client({
   name: "PetStoreClient",
-  service: PetStoreNamespace
+  service: PetStore,
 })
-namespace Customizations;   # The actual name here doesn't matter and is here for organization purposes only
+namespace PetStoreRenamed; // this namespace will be the namespace of the clients and operation groups defined in this customization file
 
 @operationGroup
-interface OpGrp1{
-  feed is PetStoreNamespace.feed
+interface OpGrp1 {
+  feed is PetStore.feed;
 }
 
 @operationGroup
 interface OpGrp2 {
-  pet is PetStoreNamespace.pet
+  pet is PetStore.pet;
 }
 ```
 
@@ -467,7 +536,7 @@ interface OpGrp2 {
 <TabItem value="python" label="Python">
 
 ```python
-from pet_store import PetStoreClient
+from pet_store_renamed import PetStoreClient
 
 client = PetStoreClient()
 
@@ -479,7 +548,7 @@ client.op_grp_2.pet()
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-using PetStore;
+using PetStoreRenamed;
 
 PetStoreClient client = new PetStoreClient();
 
@@ -502,6 +571,8 @@ client.opGrp2.pet();
 <TabItem value="java" label="Java" >
 
 ```java
+package com.petstorerenamed;
+
 PetStoreClientBuilder builder = new PetStoreClientBuilder();
 
 OpGrp1Client opGrp1Client = builder.buildOpGrp1Client();
@@ -522,27 +593,28 @@ Two clients that separates the operations can be declared using the `client` dec
 <TabItem value="typespec" label="TypeSpec" default>
 
 ```typespec
-import "./main.tsp"
-import "@azure-tools/typespec-client-generator-core"
+import "./main.tsp";
+import "@azure-tools/typespec-client-generator-core";
 
 using Azure.ClientGenerator.Core;
 
-namespace Customizations;   # The actual name here doesn't matter and is here for organization purposes only
+namespace PetStoreRenamed; // this namespace will be the namespace of the clients and operation groups defined in this customization file
 
 @client({
   name: "FoodClient",
-  service: PetStoreNamespace
+  service: PetStore,
 })
 interface Client1 {
-  feed is PetStoreNamespace.feed
+  feed is PetStore.feed;
 }
 
 @client({
-  name: "SubNamespace.PetActionClient",
-  service: PetStoreNamespace
+  name: "PetActionClient",
+  service: PetStore,
 })
+@clientNamespace("PetStoreRenamed.SubNamespace") // use @clientNamespace to specify the namespace of the client
 interface Client2 {
-  pet is PetStoreNamespace.pet
+  pet is PetStore.pet;
 }
 ```
 
@@ -550,8 +622,8 @@ interface Client2 {
 <TabItem value="python" label="Python">
 
 ```python
-from pet_store import FoodClient
-from pet_store.sub_namespace import PetActionClient
+from pet_store_renamed import FoodClient
+from pet_store_renamed.sub_namespace import PetActionClient
 
 client1 = FoodClient()
 client2 = PetActionClient()
@@ -564,8 +636,8 @@ client2.pet()
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-using PetStore;
-using PetStore.SubNamespace;
+using PetStoreRenamed;
+using PetStoreRenamed.SubNamespace;
 
 SubNamespacePetActionClient petActionClient = new SubNamespacePetActionClient();
 FoodClient foodClient = new FoodClient();
@@ -585,10 +657,10 @@ NOT_SUPPORTED;
 <TabItem value="java" label="Java" >
 
 ```java
-import com.petstorenamespace.FoodClient;
-import com.petstorenamespace.FoodClientBuilder;
-import com.petstorenamespace.subnamespace.PetActionClient;
-import com.petstorenamespace.subnamespace.PetActionClientBuilder;
+import com.petstorerenamed.FoodClient;
+import com.petstorerenamed.FoodClientBuilder;
+import com.petstorerenamed.subnamespace.PetActionClient;
+import com.petstorerenamed.subnamespace.PetActionClientBuilder;
 
 FoodClient foodClient = new FoodClientBuilder().buildClient();
 PetActionClient petActionClient = new PetActionClientBuilder().buildClient();
