--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -150,6 +150,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ResourceGroupLocationResource`](./data-types.md#Azure.ResourceManager.ResourceGroupLocationResource)
 - [`ResourceInstanceParameters`](./data-types.md#Azure.ResourceManager.ResourceInstanceParameters)
 - [`ResourceKindProperty`](./data-types.md#Azure.ResourceManager.ResourceKindProperty)
+- [`ResourceListCustomResult`](./data-types.md#Azure.ResourceManager.ResourceListCustomResult)
 - [`ResourceListResult`](./data-types.md#Azure.ResourceManager.ResourceListResult)
 - [`ResourceNameParameter`](./data-types.md#Azure.ResourceManager.ResourceNameParameter)
 - [`ResourceParentParameters`](./data-types.md#Azure.ResourceManager.ResourceParentParameters)
