--- a/docs/howtos/Client Generation/00howtogen.mdx
+++ b/docs/howtos/Client Generation/00howtogen.mdx
@@ -2,8 +2,7 @@
 title: How to generate client libraries
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This page outlines the steps to build a client library based on your TypeSpec specification. It provides a guide for the whole process from initial API design to the release of SDKs. please visit https://aka.ms/azsdk/dpcodegen.
 
