--- a/docs/howtos/Client Generation/05union.mdx
+++ b/docs/howtos/Client Generation/05union.mdx
@@ -2,8 +2,7 @@
 title: One path for multiple input/output
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This page documents emitter behavior and customization when you use union operator `|` or `@sharedRoute` to express multiple input/output for a given path.
 
