--- a/docs/howtos/Client Generation/07tcgcTypes.mdx
+++ b/docs/howtos/Client Generation/07tcgcTypes.mdx
@@ -2,8 +2,7 @@
 title: TypeSpec Type Representation in TCGC
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This page documents what type definitions in TypeSpec would look like when returned by TCGC
 
