--- a/docs/howtos/Client Generation/01setup.mdx
+++ b/docs/howtos/Client Generation/01setup.mdx
@@ -2,8 +2,7 @@
 title: Setup for SDK customization
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This page explains how to setup customization of a generator if necessary.
 
