--- a/docs/howtos/Client Generation/02client.mdx
+++ b/docs/howtos/Client Generation/02client.mdx
@@ -2,8 +2,7 @@
 title: Client hierarchy
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This page documents the default client hierarchy behavior as well as how to customize clients. For an overview of the setup, please visit the previous page.
 
