--- a/docs/howtos/Client Generation/03convenient.mdx
+++ b/docs/howtos/Client Generation/03convenient.mdx
@@ -2,8 +2,7 @@
 title: Convenient method generation
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This page documents how to customize method generation for the emitters. For an overview of the setup, please visit the setup page.
 
