--- a/docs/howtos/Client Generation/04renaming.mdx
+++ b/docs/howtos/Client Generation/04renaming.mdx
@@ -2,8 +2,7 @@
 title: Client renaming
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This page documents how to customize names for client generation. For an overview of the setup, please visit the setup page.
 
