--- a/docs/howtos/Client Generation/06types.mdx
+++ b/docs/howtos/Client Generation/06types.mdx
@@ -2,8 +2,7 @@
 title: Generated Types
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This page documents what type definitions in TypeSpec are generated as in emitted libraries
 
