--- a/docs/howtos/Client Generation/08methodInputs.mdx
+++ b/docs/howtos/Client Generation/08methodInputs.mdx
@@ -2,8 +2,7 @@
 title: Method Inputs
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This document outlines the method input signatures that language emitters will generate.
 
