--- a/docs/howtos/Client Generation/09versioning.mdx
+++ b/docs/howtos/Client Generation/09versioning.mdx
@@ -2,8 +2,7 @@
 title: Versioning
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This doc details what emitters will generate for versioned specs
 
