--- a/docs/howtos/Client Generation/10longRunningOperations.mdx
+++ b/docs/howtos/Client Generation/10longRunningOperations.mdx
@@ -2,8 +2,7 @@
 title: Long-Running Operations
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This doc details what emitters will generate for long-running operations.
 
