--- a/docs/howtos/Client Generation/11etag.mdx
+++ b/docs/howtos/Client Generation/11etag.mdx
@@ -2,8 +2,7 @@
 title: Conditional Request Header
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This doc details what emitters will generate for conditional request header
 
