--- a/docs/howtos/Client Generation/12multipart.mdx
+++ b/docs/howtos/Client Generation/12multipart.mdx
@@ -2,8 +2,7 @@
 title: Multipart
 ---
 
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 This doc details what emitters will generate for multipart request.
 
