--- a/docs/release-notes/release-2022-07-08.md
+++ b/docs/release-notes/release-2022-07-08.md
@@ -27,25 +27,23 @@ Note that **it is unlikely that this change has any impact on existing ARM specs
 
 ### Before
 
-```JavaScript
+```tsp
 @serviceHost("example.com")
 namespace MyService;
-
 ```
 
 ### After
 
-```JavaScript
+```tsp
 @server("https://example.com", "The endpoint for my service")
 namespace MyService;
-
 ```
 
 ## Versioning uses enums instead of strings
 
 Note that **it is unlikely that this change has any impact on existing ARM specs**. Versions must now be specified using string-valued enumerations, and each of the versioning decorators must reference an enum value rather than using the version string directly.
 
-```JavaScript
+```tsp
 // Before
 @versioned("2021-01-12" | "2022-01-15-preview")
 namespace Api;
@@ -57,7 +55,7 @@ namespace Api;
 enum Versions { v2021_01_12: "2021-01-12", v2022_01_15_preview: "2022-01-15-preview" }
 ```
 
-```JavaScript
+```tsp
 // Before
 @added("2022-01-15-preview")
 model Foo {}
@@ -65,5 +63,4 @@ model Foo {}
 // After
 @added(Versions.v2022_01_15_preview)
 model Foo {}
-
 ```
