--- a/docs/howtos/Client Generation/02client.mdx
+++ b/docs/howtos/Client Generation/02client.mdx
@@ -15,7 +15,7 @@ By default, each namespace with `@service` decorator will be generated as a root
 
 Other nested namespacess and interfaces of each root client will be generated as operation groups with hierarchy.
 
-The client namespace of each client will be the name of the namespace the interface belong to or the namespace itself.
+The root client's namespace will follow the namespace decorated with `@service`. If an operation group comes from a nested namespace, it will follow that namespace. If it comes from a nested interface, it will follow the namespace to which the interface belongs.
 
 Different language's code generator will have different way to organize clients and operation groups. Please refer the following examples.
 
@@ -286,15 +286,15 @@ actionsClient.close();
 
 Customization SHOULD always be done in a file called `client.tsp` along with the `main.tsp`.
 
-You could use `@client` and `@operationGroup` to reconstruct the client hierarchy, but if any customizations did, client hierarchy will only be inferred from them. The logic defined in the default behaviors will not take affect anymore.
+You can use `@client` and `@operationGroup` to reconstruct the client hierarchy. However, if any customizations are made, the client hierarchy will only be inferred from those customizations. The logic defined in the default behaviors will no longer take effect.
 
-Also, when you reconstruct the client hierarchy, the client namespace of the client and operation group will follow the new namespace you defined in `client.tsp`. You could use `@clientNamespace` to override it.
+If any customizations are made, the client's namespace will follow the namespace decorated with `@client` or the namespace to which the interface decorated with `@client` belongs. The operation group's namespace follows the same logic for `@operationGroup`. You can use `@clientNamespace` to override it if needed.
 
 For this section, we will assume that you have service called `PetStore` in the namespace `PetStore`, defining the two operations `feed` and `pet`.
 
-### Renaming the single client name
+### Renaming the client name
 
-This can be achieved with the augment operator and the emitter package
+This can be achieved with the augment decorator: `@clientName` from `typespec-client-generator-core`.
 
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
@@ -353,9 +353,9 @@ client.pet();
 </TabItem>
 </Tabs>
 
-### Renaming the single client namespace name
+### Renaming the client namespace
 
-This can be achieved with the augment operator and the emitter package
+This can be achieved with the augment decorator: `@clientNamespace` from `typespec-client-generator-core`.
 
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
