--- a/docs/howtos/Client Generation/06types.mdx
+++ b/docs/howtos/Client Generation/06types.mdx
@@ -2424,7 +2424,7 @@ TODO
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-TODO;
+TODO
 ```
 
 </TabItem>
@@ -2433,3 +2433,6 @@ TODO;
 ```java
 TODO
 ```
+
+</TabItem>
+</Tabs>
