--- a/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
@@ -196,6 +196,8 @@ public final class PetStoreNamespaceClient {
 
 ### Renaming operations and parameters
 
+Simillarly, you can rename operations like in the example below:
+
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
 
@@ -269,6 +271,8 @@ public final class PetStoreNamespaceClient {
 
 </TabItem>
 </Tabs>
+
+You cannot at this moment rename paramters in the client.tsp file.
 
 ## Implementation
 
