--- a/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
@@ -33,7 +33,7 @@ model InputModel {
 }
 
 @doc("Read my resource")
-op Get is ResourceRead<InputModel>;
+op get is ResourceRead<InputModel>;
 ```
 
 </TabItem>
