--- a/website/src/content/docs/docs/howtos/Client Generation/02client.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/02client.mdx
@@ -21,7 +21,7 @@ Different language's code generator will have different way to organize clients 
 
 <ClientTabs>
 
-```typespec
+```typespec title="main.tsp"
 @service({
   title: "Pet Store",
   version: "v1",
